fix(ObjectPage): align selected tab bottom-border correctly (#7840)
Fixes #7812

--- a/packages/main/src/components/ObjectPage/ObjectPage.module.css
+++ b/packages/main/src/components/ObjectPage/ObjectPage.module.css
@@ -111,13 +111,14 @@
 }
 
 .tabContainerComponent {
+  padding-block-start: 3px;
+  background: var(--sapObjectHeader_Background);
   &::part(content) {
     display: none;
   }
 
   &::part(tabstrip) {
     padding: 0;
-    padding-block-start: 4px;
     padding-inline: var(--_ui5wcr_ObjectPage_tab_bar_inline_padding);
     box-shadow:
       inset 0 -0.0625rem var(--sapPageHeader_BorderColor),
